<resources>
    <string name="app_name">HealthInBox</string>
    <string name="back_btn">back_btn</string>

    <string name="APP_KEY">hpawmh57ffb5l5p</string>

    <string name="sign_in">Sign In</string>
    <string name="sign_in_dropbox">SIGN IN - DropBox</string>
    <string name="calories_prompted_searchadd">Calories</string>
    <string name="email">Email</string>
    <string name="imageone">imageOne</string>
    <string name="submit">Submit</string>
    <string name="sign_out">Sign out</string>
    <string name="home">Home</string>
    <string name="dropbox_choice">DropBox</string>
    <string name="warning_backup_user_data">***Think to backup your data !***\n***Cloud storage is the most secured way to backup***</string>
    <string name="storage_options">-Storage&amp;Backup</string>
    <string name="health_management">-Health Management</string>
    <string name="sports_choice">Sport Manager</string>
    <string name="food_choice">Food Manager</string>
    <string name="subtitle_toolbar">Helps you to become better !</string>
    <string name="food_history">Food history</string>
    <string name="food_analysis">Food analysis</string>
    <string name="food_data">Food data</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sample_foodcalories">12 calories</string>
    <string name="sample_foodname">Food Name</string>
    <string name="sample_fooddate">16–02–2020 23:38</string>
    <string name="cal_sample">150 kcal</string>
    <string name="weight_sample">150 grammes</string>
    <string name="name_sample">Name</string>
    <string name="the_name_of_this_aliment_meal_is">The name of this aliment/meal is :</string>
    <string name="number_calories_contained">This contains those calories :</string>
    <string name="calories">Calories</string>
    <string name="weight">Weight</string>
    <string name="add_an_aliment">Add an Aliment</string>
    <string name="add_aliment">Add</string>
    <string name="nuke_all_aliments">Nuke all</string>
    <string name="food_recipes">My Recipes</string>
    <string name="aliments_listed_recipe">- Aliment \n- OtherAliment 2 \n- AnotherAliment 3</string>
    <string name="aliments_listed_instructions">1. Peal the Aliment.\n2. Mix the Aliment with the OtherAliment until you get a solid mixture in a bowl.\n3. Add the AnotherIngredient into the bowl, pour it into a hot-resisting plate and toss it to your witcher.\n4. Serve hot and enjoy the tossed coin!</string>
    <string name="weight_total">For this weight :</string>
    <string name="add_a_recipe">Add a recipe</string>
    <string name="name_recipe_prompt">The name of the recipe is :</string>
    <string name="number_people_feed">For this many people :</string>
    <string name="people_number">Number of people</string>
    <string name="time_preparation">Time to make it :</string>
    <string name="time">Time</string>
    <string name="cost">Cost</string>
    <string name="cost_recipe">It costs approximately :</string>
    <string name="difficulty_recipe">Realization difficulty (0 to 3)</string>
    <string name="difficulty">Difficulty</string>
    <string name="ingredients">Ingredients</string>
    <string name="ingredients_recipe">Ingredients needed :</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_recipe">Steps to make it :</string>
    <string name="calories_sample_meal">685 calories</string>
    <string name="calories_static_sample_meal">It contained : </string>
    <string name="name_sample_meal">Lasagnas</string>
    <string name="sample_name_meal_static">You ate : </string>
    <string name="sample_date_meal">22–02–2020</string>
    <string name="sample_date_meal_static">The : </string>
    <string name="add_a_meal">Add a meal</string>
    <string name="the_name_of_this_meal_is">Type of meal you ate :</string>
    <string name="meal_date">At this date :</string>
    <string name="date_sample">Date</string>
    <string name="nuke_all_meal">NUKE MEALS</string>
    <string name="add">ADD</string>
    <string name="nuke_all">Nuke all</string>
    <string name="instructions_show">Instructions : Show</string>
    <string name="cheap">Cheap</string>
    <string name="hard">Hard</string>
    <string name="_5m">5m</string>
    <string name="_5">5</string>
    <string name="what_are_you_searching">What are you searching ?</string>
    <string name="enter_a_keyword_here">Enter a keyword here</string>
    <string name="launch_search">Launch Search</string>
    <string name="no_result_found_text">No results found in the database. Do you wish to add \'keyword\' as a new Aliment ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="result_found_text">3 results found :</string>
    <string name="calories_inside_aliment_prompt">How many calories contains this aliment in 100g ?</string>
    <string name="next">Next</string>
    <string name="default_weight">100</string>
    <string name="name">Name</string>
    <string name="steps">Steps :</string>
    <string name="_0">0</string>
    <string name="stepcounter">StepCounter</string>
    <string name="activity_tracker">ActivityTracker</string>
    <string name="weight_choice">Weight Manager</string>
    <string name="weight_evolution_previous">Average 10 days\n75Kg\n+7kg</string>
    <string name="weight_you_want_to_add">Weight you want to add :</string>
    <string name="new_reference_weight">New reference weight</string>

</resources>
