<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp">

    <TextView
        android:id="@+id/item_food_history_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_foodname"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/item_food_history_calories"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_food_history_name"
        android:text="@string/sample_foodcalories"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/item_food_history_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_food_history_calories"
        android:text="@string/sample_fooddate"
        android:textAlignment="center" />

</RelativeLayout>