<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/name_sample"
            android:layout_marginBottom="8dp"
            android:textColor="@android:color/black"
            android:textSize="22sp"/>

        <TextView
            android:id="@+id/tv_recipe_number_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_name"
            android:layout_marginStart="8dp"
            android:drawableStart="@drawable/ic_people_black_24dp"
            android:drawablePadding="5dp"
            android:text="@string/_5"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recipe_time_preparation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_name"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@id/tv_recipe_number_people"
            android:drawableStart="@drawable/ic_access_time_black_24dp"
            android:drawablePadding="5dp"
            android:text="@string/_5m"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recipe_difficulty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_name"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:drawableEnd="@drawable/ic_grade_black_24dp"
            android:drawablePadding="5dp"
            android:text="@string/hard"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recipe_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_name"
            android:layout_marginEnd="8dp"
            android:layout_toStartOf="@id/tv_recipe_difficulty"
            android:drawableEnd="@drawable/ic_attach_money_black_24dp"
            android:text="@string/cheap"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_recipe_ingredients"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_cost"
            android:text="Ingredients :"
            android:textColor="@android:color/black"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/tv_recipe_ingredients_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_recipe_ingredients"
            android:text="@string/aliments_listed_recipe"
            android:layout_centerHorizontal="true"/>

        <Button
            android:id="@+id/btn_display_show_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_recipe_ingredients_details"
            android:text="@string/instructions_show"
            android:textColor="@android:color/black"
            android:textStyle="normal"
            android:drawablePadding="10dp"
            android:paddingStart="10dp"
            android:drawableEnd="@drawable/ic_add_black_24dp"
            android:textAllCaps="false"
            android:background="@null"
            style="@null"
            android:layout_marginTop="8dp"
            android:textAlignment="center"
            android:layout_centerHorizontal="true"
            android:textSize="19sp"
            tools:ignore="RtlSymmetry" />

        <TextView
            android:id="@+id/tv_recipe_instructions_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_display_show_instructions"
            android:visibility="gone"
            android:text="@string/aliments_listed_instructions"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>